<resources>
    <string name="app_name">MyPortfolio</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="se_connecter">Se connecter</string>
    <string name="signup_name">Login and SignUp ScreenDesign Demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié ?</string>
    <string name="toujours_pas_membre_inscrivez_vous">Toujours pas membre ? Inscrivez vous</string>
    <string name="montrer_mot_de_passe">Montrer mot de passe</string>
    <string name="mail">Email</string>
    <string name="nom_complet">Nom Complet</string>
    <string name="inscrire">S\'inscrire</string>
    <string name="ville">Ville</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="confirmer_mot_de_passe">Confirmer mot de passe</string>
    <string name="insc">S\'inscrire</string>
    <string name="d_j_un_compte_connectez_vous">Déjà un compte ? Connectez vous</string>
</resources>
